--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,9 @@ strong {
 
 p {
   margin: 0 0 1em 0;
+  font-size: 1rem;
+  line-height: 1.4375rem;
+  font-weight: 400;
 }
 
 
@@ -289,6 +292,7 @@ article {
   padding-top: 7px;
   border-top: 1px solid #000;
   width: 705px;
+  margin-bottom: 32px;
 }
 
 article h2 {
@@ -483,6 +487,262 @@ article h1 {
   line-height: 1.625rem;
   font-weight: 400;
   font-family: georgia, "times new roman", times, serif;
+}
+
+#theory-of-inflation {
+  display: block;
+  margin: 15px 0;
+  padding: 15px 0 0 0;
+  border-top: 1px solid #e2e2e2;
+  border-bottom: 1px solid #e2e2e2;
+  position: relative;
+}
+
+#theory-of-inflation figcaption h2 {
+  font-size: 1.25rem;
+  font-family: "nyt-cheltenham", georgia, "times new roman", times, serif;
+  line-height: 1.5rem;
+  font-weight: 700;
+  font-style: normal;
+  margin-bottom: 3px;
+  color: #333;
+  text-transform: none;
+}
+
+#theory-of-inflation figcaption p {
+  font-size: 0.875rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  margin-bottom: 10px;
+  color: #666;
+}
+
+#theory-of-inflation .graphic img {
+  width: 100%;
+}
+
+.article-interrupter {
+  margin-top: 32px;
+}
+
+.theory-inflation-box {
+  width: 175px;
+  position: absolute;
+}
+
+.theory-inflation-box p {
+  font-family: arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 13px;
+  font-weight: 300;
+  color: #000000;
+}
+
+.theory-inflation-box p span {
+  font-size: 11px;
+  font-weight: bold;
+  letter-spacing: .05em;
+}
+
+#theory-inflation-box1 {
+  top: 188px;
+  left: 0.0436%;
+}
+
+#theory-inflation-box2 {
+  top: 188px;
+  left: 25.5619%;
+}
+
+#theory-inflation-box3 {
+  top: 188px;
+  left: 51.0800%;
+}
+
+#theory-inflation-box4 {
+  top: 188px;
+  left: 76.5982%;
+}
+
+#theory-inflation-box5 {
+  top: 397px;
+  left: 0.0436%;
+}
+
+#theory-inflation-box6 {
+  top: 397px;
+  left: 25.5619%;
+}
+
+#theory-inflation-box7 {
+  top: 397px;
+  left: 51.0800%;
+}
+
+#theory-inflation-box8 {
+  top: 397px;
+  left: 76.5982%;
+}
+
+#theory-inflation-credit p {
+  color: #999;
+  font-size: 12px;
+}
+
+#theory-of-inflation .graphic {
+  display: block;
+}
+
+#theory-inflation-credit {
+  display: block;
+  position: relative;
+  padding-top: 70px;
+}
+
+#stanford-video {
+  margin-bottom: 30px;
+  margin-top: 45px;
+}
+
+#stanford-video iframe {
+  margin-bottom: 8px;
+  width: 100%;
+}
+
+figcaption .info {
+  font-size: 0.8125rem;
+  line-height: 1.0625rem;
+  font-weight: 300;
+  color: #666;
+}
+
+figcaption .credit {
+  font-size: 0.6875rem;
+  line-height: 1rem;
+  font-weight: 400;
+  color: #999;
+}
+
+.sign-up {
+  display: block;
+  border-top: 1px solid #e2e2e2;
+  margin: 7px 30px 15px 0;
+  padding: 15px 0;
+  border-bottom: 1px solid #e2e2e2;
+  float: left;
+  clear:left;
+  width: 300px;
+}
+
+.sign-up h2 {
+  font-size: 1.25rem;
+  line-height: 1.375rem;
+  font-weight: 700;
+  font-family: arial, helvetica, sans-serif;
+  padding-bottom: 2px;
+  color: #000;
+  margin: 0;
+}
+
+.sign-up p {
+  font-size: 0.875rem;
+  line-height: 1.125rem;
+  font-weight: 300;
+  font-family: arial, helvetica, sans-serif;
+  margin-bottom: 14px;
+  color: #666;
+}
+
+.telescope-figure {
+  margin: 45px 0;
+}
+
+#telescope-image {
+  width: 570px;
+  height: 381px;
+  position: relative;
+  margin-bottom: 7px;
+}
+
+.comments-button {
+  margin: 7px 30px 75px 30px;
+  float: right;
+  clear: right;
+}
+
+.comments-button:hover {
+  background-color: white;
+}
+
+.comments-button i {
+  background-color: #879cb4;
+  position: relative;
+  min-width: 95px;
+  min-height: 60px;
+  padding: 7px;
+  border: 1px solid #879cb4;
+  color: #333;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+}
+
+.comments-button i:before {
+  content: '';
+  position: absolute;
+  bottom: -15px;
+  left: 45px;
+  border-width: 14px 0 0 16px;
+  border-style: solid;
+  border-color: #879cb4 transparent;
+  display: block;
+  width: 0;
+}
+
+.comments-button .button-text {
+  letter-spacing: 0.05em;
+  color: #fff;
+  display: inline-block;
+  position: relative;
+  left: -4px;
+  font-family: arial, helvetica, sans-serif;
+}
+
+.comments-button .button-text .count {
+  font-size: 1.375rem;
+  line-height: 1rem;
+  font-weight: 700;
+  display: block;
+}
+
+.comments-button .button-text .units {
+  font-size: 0.6875rem;
+  line-height: 0.6875rem;
+  font-weight: 500;
+  display: block;
+  margin-top: 6px;
+}
+
+.article-body-footer {
+  margin-top: 24px;
+  position: relative;
+}
+
+.article-body-footer div {
+  width: 60px;
+  content: '';
+  display: inline-block;
+  height: 1px;
+  margin: 0 0 13px 0;
+  background-color: #000;
+}
+
+.article-body-footer p {
+  font-size: 0.6875rem;
+  line-height: 0.9375rem;
+  font-weight: 300;
+  font-family: arial, helvetica, sans-serif;
+  color: #999;
 }
 
 /*********************************/
