--- a/css/main.css
+++ b/css/main.css
@@ -89,12 +89,24 @@ i {
   background-image: url("https://a1.nyt.com/assets/article/20170314-141625/images/sprite/sprite-no-repeat.svg");
 }
 
+.footer-link {
+  color: #326891;
+  font-size: 0.6875rem;
+  line-height: 0.875rem;
+  font-weight: 400;
+  font-family: arial ,helvetica, sans-serif;
+}
+
+.footer-link:hover {
+  text-decoration: underline;
+}
+
 
 /*********************************/
 /*             Header            */
 /*********************************/
 
-header {
+.header {
   background: #fff;
   border-color: #e2e2e2;
   border-bottom: 1px solid #ccc;
@@ -287,7 +299,7 @@ ol {
   display: block;
 }
 
-article {
+.main-article {
   margin: 0 auto;
   padding-top: 7px;
   border-top: 1px solid #000;
@@ -295,7 +307,7 @@ article {
   margin-bottom: 32px;
 }
 
-article h2 {
+.main-article h2 {
   font-family: "nyt-franklin", arial, helvetica, sans-serif;
   font-size: .8175rem;
   font-weight: 700;
@@ -305,11 +317,11 @@ article h2 {
   text-transform: uppercase;
 }
 
-article h2 a:hover {
+.main-article h2 a:hover {
   text-decoration: underline;
 }
 
-article h1 {
+.main-article h1 {
   font-size: 28px;
   line-height: 2.375rem;
   font-weight: 700;
@@ -749,9 +761,333 @@ figcaption .credit {
 /* Other Articles Footer Section */
 /*********************************/
 
+.footer-other-articles {
+  margin: 0 auto;
+  width: 705px;
+  position: relative;
+  margin-bottom: 115px;
+}
 
+.footer-header {
+  color: #333;
+  font-size: 1.0625rem;
+  line-height: 1.0625rem;
+  font-weight: 700;
+  font-family: arial ,helvetica, sans-serif;
+  padding-top: 9px;
+  padding-bottom: 13px;
+}
+
+.footer-header a:hover {
+  text-decoration: underline;
+}
+
+/* Left side */
+.more-space-cosmos-container {
+  border-top: 1px solid #ccc;
+  display: block;
+  float: left;
+  clear: left;
+  width: 375px;
+}
+
+.footer-left-container ul li {
+  width: 180px;
+  height: 216px;
+  display: inline-block;
+  margin-bottom: 20px;
+  vertical-align: top;
+}
+
+.more-space-cosmos-container ul li:nth-child(3),
+.more-space-cosmos-container ul li:nth-child(4) {
+  height: 200px;
+}
+
+.footer-left-container ul li:nth-child(even) {
+  float: right;
+  clear: right;
+}
+
+.footer-left-container ul li img {
+  width: 180px;
+  height: 120px;
+  margin-bottom: 7px;
+}
+
+.footer-left-container ul li a:hover h2,
+.footer-left-container ul li a:hover h1 {
+  text-decoration: underline;
+}
+
+.footer-left-container ul li h3 {
+  font-size: 0.6875rem;
+  line-height: 0.6875rem;
+  font-weight: 700;
+  color: #000;
+  margin-bottom: 6px;
+  text-transform: uppercase;
+  font-family: arial ,helvetica, sans-serif;
+}
+
+.footer-left-container ul li h2 {
+  font-size: 1rem;
+  line-height: 1.125rem;
+  font-weight: 500;
+  color: #000;
+}
+
+.recommended-container {
+  border-top: 1px solid #ccc;
+  padding-top: 7px;
+  display: inline-block;
+  width: 375px;
+}
+
+.recommended-container h1 {
+  color: #000;
+  font-size: 1.5rem;
+  line-height: 1.625rem;
+  font-weight: 400;
+}
+
+.recommended-container p {
+  font-size: 0.875rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  color: #666;
+  margin-top: 5px;
+}
+
+/* Aside */
+
+.trending-container {
+  border-top: 1px solid #ccc;
+  padding-top: 10px;
+  display: block;
+  float: right;
+  clear: right;
+  margin: 0 0 45px 30px;
+  width: 300px;
+}
+
+#trending-header h2 {
+  color: #000;
+  font-size: 0.6875rem;
+  line-height: 0.6875rem;
+  font-weight: 700;
+  font-family: arial, helvetica, sans-serif;
+  text-transform: uppercase;
+  margin-bottom: 1em;
+}
+
+.trending-container ol {
+  margin: 0 0 3px;
+  display: inline-block;
+}
+
+.trending-container ol li {
+  border-top: 1px solid #f3f3f3;
+  padding-top: 6px;
+  list-style-type: none;
+  font-size: 1.1875rem;
+  line-height: 1.1875rem;
+  font-weight: 400;
+  font-family: georgia, "times new roman", times, serif;
+  margin-bottom: 6px;
+  color: #000;
+  display: flex;
+  align-items: center;
+  counter-increment: li;
+}
+
+.trending-container ol li:first-child {
+  border: none;
+  padding: none;
+}
+
+.trending-container ol li:before {
+  margin-right: 15px;
+  
+  content: counter(li) ".";
+  flex-shrink: 0;
+  width: 4%;
+  text-align: right;
+}
+
+.trending-container ol li article {
+  display: flex;
+  align-items: center;
+  min-height: 40px;
+}
+
+.trending-container ol li h2 {
+  display: block;
+  text-align: left;
+  font-size: 0.8125rem;
+  line-height: 1rem;
+  font-weight: 300;
+  color: #326891;
+}
+
+.trending-container ol li a:hover h2 {
+  text-decoration: underline;
+}
+
+.trending-container ol li .thumb {
+  width: 40px;
+  height: 40px;
+}
+
+.trending-container ol li .thumb img {
+  width: 40px;
+  height: 40px;
+}
+
+.trending-container footer {
+  border-top: 1px solid #f3f3f3;
+  padding-top: 7px;
+}
 
 
 /*********************************/
 /*             Footer            */
 /*********************************/
+
+.site-index {
+  margin: 0 auto;
+  position: relative;
+  width: 960px;
+  padding-bottom: 25px;
+  border-bottom: 1px solid #e2e2e2;
+  margin-bottom: 5px;
+}
+
+.site-index-top-border {
+  content: '';
+  display: block;
+  border-top: 2px solid #e2e2e2;
+  border-bottom: 1px solid #e2e2e2;
+  height: 4px;
+  width: 100%;
+  position: relative;
+  margin: 0 auto;
+  margin-bottom: 8px;
+}
+
+#site-index-logo {
+  width: 185px;
+  height: 26px;
+}
+
+.site-index-header {
+  display: block;
+  margin: 0 auto;
+  position: relative;
+}
+
+.site-index-header #homepage-link {
+  color: #326891;
+  display: block;
+  float: right;
+  clear: right;
+  margin-top: 7px;
+}
+
+.site-index-links-container {
+  margin-top: 25px;
+  font-family: arial, helvetica, sans-serif;
+  height: 353px;
+}
+
+.site-index-links-container .column {
+  float: left;
+  width: 150px;
+}
+
+.site-index-links-container .column h3 {
+  margin-bottom: 14px;
+  font-size: 0.8125rem;
+  line-height: 0.6875rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+}
+
+.site-index-links-container .column ul li {
+  margin-bottom: 8px;
+  font-size: 0.875rem;
+  line-height: 1rem;
+  font-weight: 500;
+}
+
+.site-index-links-container .column ul li a:hover {
+  text-decoration: underline;
+}
+
+.site-index-links-container #last-column {
+  border-left: 1px solid #e2e2e2;
+  padding-left: 13px;
+  width: 192px;
+  height: 353px;
+  float: right;
+  clear: none;
+}
+
+.site-index-links-container #last-column li {
+  margin: 0 0 3px 0;
+}
+
+.site-index-links-container #last-column .top-menu li {
+  margin: 0 0 8px 0;
+}
+
+.site-index-links-container #last-column a {
+  font-size: 0.6875rem;
+  line-height: 0.9375rem;
+  font-weight: 500;
+}
+
+.site-index-links-container #last-column .top-menu a {
+  font-size: 1rem;
+  line-height: 1.125rem;
+  font-weight: 700;
+}
+
+.site-index-links-container #last-column .middle-menu {
+  padding-bottom: 3px;
+  border-bottom: 1px solid #e2e2e2;
+  margin-bottom: 7px;
+}
+
+.main-footer {
+  width: 960px;
+  margin: 0 auto;
+  position: relative;
+  margin-bottom: 16px;
+}
+
+.main-footer #bottom-links-container ul li {
+  display: inline;
+  font-size: 10px;
+  font-weight: 400;
+  font-family: arial, helvetica, sans-serif;
+  border-left: 1px solid #e2e2e2;
+  line-height: 10px;
+  padding-left: 5px;
+  padding-right: 2px;
+}
+
+.main-footer #bottom-links-container ul li:first-child {
+  border: none;
+  padding-left: 0;
+}
+
+.main-footer #bottom-links-container ul li a {
+  color: #999;
+}
+
+.main-footer #bottom-links-container ul li a:hover {
+  text-decoration: underline;
+}
+
